--- a/app/src/main/res/layout/servermusicfragment_friendroom.xml
+++ b/app/src/main/res/layout/servermusicfragment_friendroom.xml
@@ -6,25 +6,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/friendPass"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="@string/against"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@id/friendTracks"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <ListView
         android:id="@+id/friendTracks"
         android:layout_width="409dp"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@id/playButton"
+        app:layout_constraintBottom_toTopOf="@id/friendDelete"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/friendPass" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/friendPassButton"
@@ -34,7 +23,7 @@
         app:layout_constraintBottom_toTopOf="@+id/friendUserList"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/friendDelete" />
+        app:layout_constraintTop_toBottomOf="@id/playButton" />
 
     <Button
         android:id="@+id/friendUserList"
@@ -56,23 +45,35 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/friendUserList" />
 
-    <Switch
+    <Button
         android:id="@+id/playButton"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/playToo"
-        app:layout_constraintBottom_toTopOf="@+id/friendDelete"
+        app:layout_constraintBottom_toTopOf="@+id/friendPassButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/friendTracks" />
+        app:layout_constraintTop_toBottomOf="@id/friendInfo" />
 
     <Switch
         android:id="@+id/friendDelete"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:paddingStart="10dp"
         android:text="@string/deleteAfterEnd"
-        app:layout_constraintBottom_toTopOf="@id/friendPassButton"
+        app:layout_constraintBottom_toTopOf="@id/friendInfo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/playButton" />
+        app:layout_constraintTop_toBottomOf="@+id/friendTracks" />
+
+    <Button
+        android:id="@+id/friendInfo"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="@string/info"
+        app:layout_constraintBottom_toTopOf="@+id/playButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/friendDelete" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
