--- a/app/src/main/res/layout/servermusicfragment_myroom.xml
+++ b/app/src/main/res/layout/servermusicfragment_myroom.xml
@@ -11,8 +11,9 @@
         android:id="@+id/myDelete"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:paddingStart="10dp"
         android:text="@string/deleteAfterEnd"
-        app:layout_constraintBottom_toTopOf="@+id/myPassButton"
+        app:layout_constraintBottom_toTopOf="@+id/myInfo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/myTracks" />
@@ -24,18 +25,8 @@
         android:text="@string/deleteRoom"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <TextView
-        android:id="@+id/myPass"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="@string/against"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@+id/myTracks"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/myUserList" />
 
     <ListView
         android:id="@+id/myTracks"
@@ -44,7 +35,7 @@
         app:layout_constraintBottom_toTopOf="@+id/myDelete"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/myPass">
+        app:layout_constraintTop_toTopOf="parent">
 
     </ListView>
 
@@ -65,6 +56,25 @@
         android:layout_height="wrap_content"
         android:text="@string/pass"
         app:layout_constraintBottom_toTopOf="@+id/myUserList"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/setPass" />
+
+    <Button
+        android:id="@+id/setPass"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="@string/setPass"
+        app:layout_constraintTop_toBottomOf="@+id/myInfo"
+        app:layout_constraintBottom_toTopOf="@+id/myPassButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+    <Button
+        android:id="@+id/myInfo"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="@string/info"
+        app:layout_constraintBottom_toTopOf="@+id/setPass"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/myDelete" />
